# QuickSDFBlender

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
benchmarks/: README.md  blender_performance_probe.py
docs/: RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.6.1.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.7.1.md  RELEASE_NOTES_0.7.2.md  USER_GUIDE_JA.md
native/: CMakeLists.txt  build.ps1  quicksdf_core.cpp
quick_sdf_blender/: THIRD_PARTY_NOTICES.md  __init__.py  bake.py  bitplane.py  blender_manifest.toml  boundary.py  core.py  history.py  i18n.py  jobs.py  live_preview.py  migration.py  model.py  native.py  operators.py  packing.py  pixel_buffer.py  png16.py  preview.py  preview_cache.py  residency.py  review.py  runtime.py  smart_paint.py  studio.py  symmetry.py  timeline.py  tools.py  ui.py
scripts/: build_extension.ps1  run_performance_benchmarks.ps1
tests/: blender_adaptive_projection_smoke.py  blender_auto_key_smoke.py  blender_icosphere_paint_smoke.py  blender_installed_extension_smoke.py  blender_interactive_paint_smoke.py  blender_migration_smoke.py  blender_preview_render_probe.py  blender_projection_paint_smoke.py  blender_residency_smoke.py  blender_saved_state_smoke.py  blender_schema5_smoke.py  blender_schema6_smoke.py  blender_smoke.py  blender_studio_smoke.py  blender_studio_switch_smoke.py  blender_timeline_isolation_smoke.py  test_bake.py  test_bitplane.py  test_boundary.py  test_core.py  test_history.py  test_jobs.py  test_native.py  test_packing.py  test_pixel_buffer.py  test_preview_cache.py  (+6 more)
(+24 files in other folders)
